# link-shorter-rs

./: Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker.yaml
src/: index.html  index.txt  main.rs  serve.rs  shorter.rs  token.rs
