[package]
name = "link-shorter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["form"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
itertools = "0.14.0"
chrono = "0.4.39"
rand = "0.8.5"
url = "2.5.4"
urlencoding = "2.1.3"
serde = {version = "1.0.217", features = ["derive"]}
